# winico

./: ChangeLog  Makefile.in  Readme  Winico.tek  configure  configure.in  license.terms  makefile.vc  mkIndex.tcl.in  test.tcl  testico.tcl  tkwinico.c  tkwinico.rc  winico.tcl  zipadd.tcl
demos/: demo.tcl  sample.tcl  sample2.tcl  teatimer.tcl  trayapp.tcl
doc/: winico.man
tclconfig/: tcl.m4
teki/: Readme  changes.txt  patch-core.tcl  rtekfile.tcl  tcl-support.txt  teki-notes.txt  teki.tcl  todo.txt
teki/tekilib/: debug.tcl  http.tcl  pkgIndex.tcl  progress-tcl.tcl  progress-tk.tcl  undo.tcl  wise.tcl
win/: Makefile.vc
